--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,5 @@ org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M"
 kotlin.code.style=official
 
 #MPP
-kotlin.mpp.enableGranularSourceSetsMetadata=true
-kotlin.native.enableDependencyPropagation=false
+kotlin.mpp.stability.nowarn=true
 kotlin.mpp.enableCInteropCommonization=true
